--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.1",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "^8.6.0",
+    "material-icons": "^0.3.1",
     "prettier": "^1.19.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
